# rust-airline-tracking

./: Cargo.toml
src/: .env  lib.rs  main.rs
src/arrivals/: get_arrivals.rs  mod.rs
src/data/: iata-icao.csv
src/data_builder/: build.rs  connect.rs  mod.rs
src/departures/: get_airports.rs  get_departures.rs  get_depatures.rs  mod.rs
