[package]
name = "rust-airline-tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
csv = "1.1"
tokio-postgres = "0.7.7"
tokio = { version = "1.23.0", features = ["full"] }
dotenv = "0.15.0"
envy = "0.4.2"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"